Windows: False error on console when a new folder is created during a save or export operation #32572

Closed
opened 2012-09-18 00:45:24 +02:00 by Gaia Clary · 3 comments
Member

%%%This problem seems to be only on windows:
Try to save the default scene to a new folder as follows:

1.) in the file path add the new folder, e.g.: "d:\mynewfolder" (mynewfolder does NOT exist yet)
2.) Press return. A popup shows up: "Create new Directory?"
3.) Click "OK"
4.) A message appears in the console: "Unable to create directory d:"

While the directory "d:\mynewfolder" is actually created as expected,
the "false alarm" remains in the console.
The problem shows up on any disk drive.

I found 2 locations where to look at:

BLI_exists() returns 0 for disk drives (like "d:") where it probably was meant to return something != 0 ?
BLI_dir_create_recursive() calls BLI_exists("d:"), gets the wrong answer and then tries to create "d:" and that fails.

I tested on windows 7, blender version 50699%%%

%%%This problem seems to be only on windows: Try to save the default scene to a new folder as follows: 1.) in the file path add the new folder, e.g.: "d:\mynewfolder" (mynewfolder does NOT exist yet) 2.) Press return. A popup shows up: "Create new Directory?" 3.) Click "OK" 4.) A message appears in the console: "Unable to create directory d:" While the directory "d:\mynewfolder" is actually created as expected, the "false alarm" remains in the console. The problem shows up on any disk drive. I found 2 locations where to look at: BLI_exists() returns 0 for disk drives (like "d:") where it probably was meant to return something != 0 ? BLI_dir_create_recursive() calls BLI_exists("d:"), gets the wrong answer and then tries to create "d:" and that fails. I tested on windows 7, blender version 50699%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r50722.%%%

%%%fixed r50722.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32572
No description provided.