fix [#32572] Windows: False error on console when a new folder is created during a save or export operation